# erosion_model_exploration

./: .gitignore  CLAUDE.md  COMMANDS.md  README.md  RUN_AMP_COMPILE.sh  TODO.md  lorenz_analysis.py  models_registry.json  pyproject.toml  spatial_autocorr.py
DASHBOARD_FROM_TYTONAI/: app.py  evaluate_test.py
DASHBOARD_FROM_TYTONAI/services/: cache.py  inference.py  registry.py
DASHBOARD_FROM_TYTONAI/tabs/: compare.py  explorer.py  helpers.py  map.py  overview.py  raw_data.py  statistics.py  test_set.py
Experiments_MLFLOW/: config.py  evaluate_train_mlflow.py  register_mlflow_models.py  run_experiment.py
Experiments_MLFLOW/data/: dataset.py  download_test.py  download_train.py
Experiments_MLFLOW/metadata/: DATABALANCE_CONFIG.JSON  EROSION_DATASET_TEST_METADATA.json  OBJECT_TRAIN_INPUT_JSON
Experiments_MLFLOW/models/: __init__.py  segformer.py  unet.py
Experiments_MLFLOW/tests/: test_dataset.py  test_metrics.py  test_models.py
Experiments_MLFLOW/training/: metrics.py  trainer.py
analyse/: encoders_topo.html  erosion_analysis_report.md  lorenz_analysis_methodology.md  lorenz_interpretation.md
confluence_page/: 00_executive_summary.md  01_context_and_objectives.md  02_dataset_design.md  03_erosion_statistics.md  04_training_infrastructure.md  05_model_lineage.md  06_results.md  07_dashboard.md  08_findings_and_next_steps.md  09_finetuning_and_transfer.md
miscell./: HELPERS_S3.md  f1_Score_a_la_mano.md
src/: app.py  build_geo.py  config.py  dataset.py  download_tiles.py  evaluate.py  model.py  run_all.py  test_modules.py  visualize.py
