[project]
name = "erosion-r-and-d"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "segmentation-models-pytorch==0.4.0",
    "timm",
    "huggingface-hub",
    "numpy",
    "pandas",
    "matplotlib",
    "Pillow",
    "streamlit",
    "boto3",
    "pyarrow",
    "duckdb",
    "plotly",
    "pyproj",
    "python-dotenv",
    "tqdm",
    "albumentations>=2.0.8",
    "mlflow>=3.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Experiments_MLFLOW"]

# ── uv: CUDA wheels on Windows, PyPI (CUDA) on Linux ─────────────────────────
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
